--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author :
 # Else if you are pushing to username.github.com, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://xyzzy-022.github.com
+production_url : http://xyzzy-022.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
